@@ -7,6 +7,7 @@ package org.opensearch.sql.opensearch.storage;
 
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
+import java.util.Optional;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Answers;
@@ -18,6 +19,7 @@ import org.opensearch.sql.planner.logical.LogicalAD;
 import org.opensearch.sql.planner.logical.LogicalML;
 import org.opensearch.sql.planner.logical.LogicalMLCommons;
 import org.opensearch.sql.planner.logical.LogicalPlan;
+import org.opensearch.transport.client.node.NodeClient;
 
 @ExtendWith(MockitoExtension.class)
 public class OpenSearchDefaultImplementorTest {
@@ -27,7 +29,8 @@ public class OpenSearchDefaultImplementorTest {
   @Test
   public void visitMachineLearning() {
     LogicalMLCommons node = Mockito.mock(LogicalMLCommons.class, Answers.RETURNS_DEEP_STUBS);
-    Mockito.when(node.getChild().get(0)).thenReturn(Mockito.mock(LogicalPlan.class));
+    Mockito.when(node.getChild().getFirst()).thenReturn(Mockito.mock(LogicalPlan.class));
+    Mockito.when(client.getNodeClient()).thenReturn(Optional.of(Mockito.mock(NodeClient.class)));
     OpenSearchIndex.OpenSearchDefaultImplementor implementor =
         new OpenSearchIndex.OpenSearchDefaultImplementor(client);
     assertNotNull(implementor.visitMLCommons(node, null));
@@ -36,7 +39,8 @@ public class OpenSearchDefaultImplementorTest {
   @Test
   public void visitAD() {
     LogicalAD node = Mockito.mock(LogicalAD.class, Answers.RETURNS_DEEP_STUBS);
-    Mockito.when(node.getChild().get(0)).thenReturn(Mockito.mock(LogicalPlan.class));
+    Mockito.when(node.getChild().getFirst()).thenReturn(Mockito.mock(LogicalPlan.class));
+    Mockito.when(client.getNodeClient()).thenReturn(Optional.of(Mockito.mock(NodeClient.class)));
     OpenSearchIndex.OpenSearchDefaultImplementor implementor =
         new OpenSearchIndex.OpenSearchDefaultImplementor(client);
     assertNotNull(implementor.visitAD(node, null));
@@ -45,7 +49,8 @@ public class OpenSearchDefaultImplementorTest {
   @Test
   public void visitML() {
     LogicalML node = Mockito.mock(LogicalML.class, Answers.RETURNS_DEEP_STUBS);
-    Mockito.when(node.getChild().get(0)).thenReturn(Mockito.mock(LogicalPlan.class));
+    Mockito.when(node.getChild().getFirst()).thenReturn(Mockito.mock(LogicalPlan.class));
+    Mockito.when(client.getNodeClient()).thenReturn(Optional.of(Mockito.mock(NodeClient.class)));
     OpenSearchIndex.OpenSearchDefaultImplementor implementor =
         new OpenSearchIndex.OpenSearchDefaultImplementor(client);
     assertNotNull(implementor.visitML(node, null));
